# sonar-deep-research-openrouter-mcp

./: .env.example  .gitignore  LICENSE  README.md  _smoketest.py  pyproject.toml
src/sonar_dr_openrouter_mcp/: __init__.py  server.py
