[project]
name = "sonar-deep-research-openrouter-mcp"
version = "0.2.0"
description = "MCP server for Perplexity Sonar Deep Research (and Sonar Pro) via OpenRouter — China-payment-friendly drop-in for the deep-research use case."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "zhihua.wei" }]
keywords = ["mcp", "perplexity", "sonar", "deep-research", "openrouter", "claude"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
sonar-dr-mcp = "sonar_dr_openrouter_mcp.server:main"

[project.urls]
Homepage = "https://github.com/two4mamba/sonar-deep-research-openrouter-mcp"
Issues = "https://github.com/two4mamba/sonar-deep-research-openrouter-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sonar_dr_openrouter_mcp"]
